old_microk8s/flask-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-deployment
  labels:
    app: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api-container
        image: localhost:32000/flask-api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
