old_microk8s/blogdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5432
  selector:
    app: blogdb-postgres
