old_microk8s/flask-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 30005
    port: 5000
    targetPort: 5000
  selector:
    app: flask-api
