old_microk8s/blog-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: blog-ui-ingress
spec:
    rules:
        - host: my-blog.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: blog-ui-service
                            port:
                                number: 8090
